[package]
name = "pdl"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parse", "display", "to_json"]
parse = ["log", "nom"]
display = ["indented"]
to_json = ["serde", "serde_json"]

[dependencies]
cfg-if = "0.1"

log = { version = "0.4", optional = true }
nom = { version = "5", optional = true }
indented = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
pretty_env_logger = "0.3"
failure = "0.1"
structopt = "0.2"

[[example]]
name = "parser"
required-features = ["parse", "display", "to_json"]
