[package]
name = "pdl"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Parse PDL file for the Chrome DevTools Protocol"
homepage = "https://github.com/flier/rust-pdl"
repository = "https://github.com/flier/rust-pdl"
readme = "README.md"
keywords = ["chrome", "devtools", "headless"]
categories = ["api-bindings", "development-tools"]
license = "MIT"
edition = "2018"

[badges]
appveyor = { repository = "flier/rust-pdl", branch = "master", service = "github" }
travis-ci = { repository = "flier/rust-pdl", branch = "master" }

[features]
default = ["parse", "display", "to_json"]
parse = ["log", "nom"]
display = ["indented"]
to_json = ["serde", "serde_json"]

[dependencies]
cfg-if = "0.1"

log = { version = "0.4", optional = true }
nom = { version = "5", optional = true }
indented = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
pretty_env_logger = "0.3"
failure = "0.1"
structopt = "0.2"
open = "1.3"

[[example]]
name = "parser"
required-features = ["parse", "display", "to_json"]
